--- a/front/index.html
+++ b/front/index.html
@@ -46,6 +46,7 @@
                 <p class="order-info">订单号: <span id="orderId"></span></p>
                 <p class="order-info">支付金额: <span id="orderAmount"></span> 元</p>
                 <button id="refreshBtn" class="btn btn-secondary">刷新订单状态</button>
+                <button id="syncBtn" class="btn btn-secondary">更新支付状态</button>
             </div>
         </div>
 
